<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp"
        tools:context=".MainActivity">
        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:src="@tools:sample/avatars"
            android:src="@drawable/ic_camera"
            android:contentDescription="@string/image_hero_description" />
        <EditText
            android:inputType="text"
            android:id="@+id/et_hero_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/title_hero_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_avatar"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"
            android:autofillHints="Hero Name" />
        <EditText
            android:inputType="text"
            android:hint="@string/title_alter"
            android:id="@+id/et_hero_alter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            app:layout_constraintTop_toBottomOf="@+id/et_hero_name"
            app:layout_constraintStart_toEndOf="@id/iv_avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/v_separator"
            android:textAlignment="center"
            android:autofillHints="Alter Ego" />
        <View
            android:id="@+id/v_separator"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_avatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/black"
            />
        <TextView
            android:id="@+id/tv_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_bio"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/v_separator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <EditText
            android:id="@+id/et_bio"
            android:hint="@string/small_biography"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_bio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints="Small biography"
            android:inputType="text" />
        <TextView
            android:id="@+id/tv_power"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_power"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/et_bio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <RatingBar
            android:id="@+id/rb_power"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_power"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
         />
        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/btn_save"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>