<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="hero"
            type="com.example.basicskotlin.Hero" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".DetailActivity">

        <ImageView
            android:id="@+id/iv_hero"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            tools:src="@drawable/ic_camera"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/image_hero_description" />

        <TextView
            android:id="@+id/tv_hero_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/iv_hero"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@{hero.name}"
            android:textStyle="bold"
            android:textSize="30sp"
            android:padding="10dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/tv_alter_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_hero_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/title_alter"
            android:textStyle="italic"
            android:textSize="20sp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/tv_alter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_alter_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@{hero.alter}"
            android:textSize="30sp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/tv_bio_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_alter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/title_bio"
            android:textStyle="italic"
            android:textSize="20sp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/tv_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_bio_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@{hero.bio}"
            android:textSize="30sp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp" />

        <RatingBar
            android:id="@+id/rb_power"
            app:layout_constraintTop_toBottomOf="@id/tv_bio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:isIndicator="true"
            android:rating="@{hero.power}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
    </RelativeLayout>
</layout>